# Airplay-receiver

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
install/linux/: install.sh
install/windows/: Install_AirPlayReceiver.bat  bundle.wxs  installer.iss  installer.wxs
src/airplay_receiver/: __init__.py  __main__.py  audio.py  config.py  dacp.py  platform.py  raop.py  themes.py
src/airplay_receiver/ui/: __init__.py  buttons.py  colours.py  main_window.py  settings.py  widgets.py
src/airplay_receiver/ui/updater/: ui_updater.py
src/airplay_receiver/updater/: ab_manager.py  security.py  ui_updater.py  updater.py
src/updater/: ui_updater.py
tests/: test_audio.py  test_config.py  test_raop.py  test_themes.py
